Añadido todo el contenido
Se agrego todo el contenido base y una prueba del slide en la area de
expertos, esto queda pendiente para responsive...

--- a/stylus/fonts.styl
+++ b/stylus/fonts.styl
@@ -72,39 +72,42 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-stethoscope:before {
+.icon-facebook:before {
+    content: "\e600";
+}
+.icon-twitter:before {
     content: "\e601";
 }
-.icon-pharmacy:before {
+.icon-stethoscope:before {
     content: "\e602";
 }
-.icon-idea:before {
+.icon-pharmacy:before {
     content: "\e603";
 }
-.icon-heart:before {
+.icon-idea:before {
     content: "\e604";
 }
-.icon-graphic:before {
+.icon-heart:before {
     content: "\e605";
 }
-.icon-doctor:before {
+.icon-graphic:before {
     content: "\e606";
 }
-.icon-design:before {
+.icon-doctor:before {
     content: "\e607";
 }
-.icon-code:before {
+.icon-design:before {
     content: "\e608";
 }
-.icon-business:before {
+.icon-code:before {
     content: "\e609";
 }
-.icon-glass:before {
+.icon-business:before {
     content: "\e60a";
 }
-.icon-apple:before {
+.icon-glass:before {
     content: "\e60b";
 }
-.icon-swtijuana:before {
-    content: "\e600";
+.icon-apple:before {
+    content: "\e60c";
 }
